#103 - uploader popup on mobile was fixed

--- a/template/css/media-phone.css
+++ b/template/css/media-phone.css
@@ -77,6 +77,10 @@ html {
     box-shadow:none;
 }
 
+.bx-popup-width {
+    width:100%;
+}
+
 /* page layouts */
 
 .bx-layout-col {
