--- a/template/css/uploaders.css
+++ b/template/css/uploaders.css
@@ -3,10 +3,6 @@
     color:#900;
 }
 
-.bx-uploader-form-cont {
-    width:500px;
-}
-
 .bx-uploader-ghost-preview {
     width:101px; 
     float:left;
